[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Fonts/Orbitron/Orbitron-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/img/cientist_profile.png" type="Texture" id=2]
[ext_resource path="res://assets/img/Slot_Cientista.png" type="Texture" id=3]
[ext_resource path="res://assets/img/Texto_Cientista.png" type="Texture" id=4]
[ext_resource path="res://scripts/scientist_Dialogue.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 1 )

[node name="scientist_Dialogue" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.667358
margin_right = -0.667358
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 330.665
margin_top = 24.3213
margin_right = 969.665
margin_bottom = 158.321
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 990.045, 83.9807 )
scale = Vector2( 3.25993, 3.14339 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 978.126, 107.417 )
scale = Vector2( 1.26598, 1.32868 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 563.665
margin_top = 67.6561
margin_right = 931.665
margin_bottom = 146.656
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 6.0
[connection signal="timeout" from="Timer" to="." method="textList"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
